deployzip/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-detection-message-schema/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-detectionMessageSchema
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-detection-message-schema
    sas.com/admin: namespace
  name: sas-detection-message-schema
spec:
  host: $(INGRESS_HOST)
  path: /detectionMessageSchema
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-detection-message-schema
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-detectionMessageSchema
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-detection-message-schema
    sas.com/admin: namespace
  name: sas-detection-message-schema-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /detectionMessageSchema
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-detection-message-schema
  wildcardPolicy: Subdomain
